--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/GamblingBuild.json", {onProgress: UnityProgress});
     </script>
   </head>
-  <body style="margin:0; overflow:hidden;">
-  <div id="unityContainer"></div>
-</body>
+  <body>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">GamblingMachine_LightVersion</div>
+      </div>
+    </div>
+  </body>
 </html>
